<resources>
	<string name="global_application_name">Wireless Tether</string>
	<string name="global_application_installed">Binaries and config-files installed!</string>
	<string name="global_application_error_restartsecwifi">Unable to restart secured wifi!</string>
	<string name="global_application_tethering_running">Tethering is currently running ...</string>
	<string name="global_application_accesscontrol_disabled">AC disabled</string>
	<string name="global_application_accesscontrol_authorized">Authorized</string>
	<string name="global_application_accesscontrol_unauthorized">Unauthorized</string>
	<string name="global_application_connected">connected</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_about">About</string>
    <string name="main_activity_donate">Donate</string>
    <string name="main_activity_close">Close</string>
    <string name="main_activity_notroot">Not Root!</string>
    <string name="main_activity_nonetfilter">No Netfilter!</string>
    <string name="main_activity_noaccesscontrol">No Access Control!</string>
    <string name="main_activity_accesscontrol_disabled">Access-Control disabled.</string>
    <string name="main_activity_exit">Exit</string>
    <string name="main_activity_ignore">Ignore</string>
    <string name="main_activity_yes">Yes</string>
    <string name="main_activity_no">No</string>
    <string name="main_activity_ok">OK</string>
    <string name="main_activity_locked">Tether is locked!</string>
    <string name="main_activity_showlog">Show Log</string>
    <string name="main_activity_accesscontrol">Access Control</string>
    <string name="main_activity_start">Start Tethering</string>
    <string name="main_activity_start_summary">Please wait while starting...</string>
    <string name="main_activity_start_errors">Tethering started with errors! Please check \'Show log\'.</string>
    <string name="main_activity_start_unable">Unable to start tethering. Is your device \'rooted\'?</string>
    <string name="main_activity_start_wiredtethering_running">Wired-tethering seems to be running at the moment. Please disable first!</string>
    <string name="main_activity_start_usbtethering_running"><![CDATA[USB-tethering seems to be running at the moment. Please disable it first: Settings -> Wireless & network setting -> Internet tethering.]]></string>
    <string name="main_activity_start_unknownstate">Your phone is currently in an unknown state - try to reboot!</string>
    <string name="main_activity_stop">Stop Tethering</string>
    <string name="main_activity_stop_summary">Please wait while stopping...</string>
    <string name="main_activity_confirm">Confirm</string>
    <string name="main_activity_cancel">Cancel</string>
    <string name="main_activity_trackball_pressed_start">Trackball pressed. Confirm tether start.</string>
    <string name="main_activity_trackball_pressed_stop">Trackball pressed. Confirm tether stop.</string>
    <string name="log_activity_nologfile">Unable to open log-File. File does not exist!</string>
    <string name="main_layout_presstostart">- Press to start tethering. -</string>
    <string name="main_layout_presstostop">- Press to stop tethering. -</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="main_layout_lock">Lock</string>
    <string name="accesscontrol_activity_reloadclientlist">Reload Client-List</string>
    <string name="accesscontrol_activity_applysettings">Apply Settings</string>
    <string name="accesscontrol_activity_enabled">Access-Control enabled.</string>
    <string name="accesscontrol_activity_disabled">Access-Control disabled.</string>
    <string name="accesscontrol_activity_is_enabled">Access-Control is enabled.</string>
    <string name="accesscontrol_activity_is_disabled">Access-Control is disabled.</string>
    <string name="accesscontrol_activity_error_save_whitelistfile">Unable to save whitelist-file!</string>
    <string name="accesscontrol_activity_error_remove_whitelistfile">Unable to remove whitelist-file!</string>
    <string name="accesscontrol_activity_error_read_leasefile">Unable to read leases-file!</string>
    <string name="accesscontrol_activity_config_saved">Access-Control Configuration saved!</string>
    <string name="accesscontrol_activity_not_connected">- Not connected -</string>
    <string name="accesscontrol_layout_connectedclients">Connected/Authorized Clients:</string>
	<string name="accesscontrol_layout_apply">Apply</string>
	<string name="accesscontrol_layout_enable">Enable</string>
	<string name="accesscontrol_layout_disable">Disable</string>
    <string name="setup_activity_reinstall">(Re)-Install binaries/configs</string>
    <string name="setup_activity_restart_tethering_title">Restart Tethering</string>
    <string name="setup_activity_restart_tethering_message">Please wait while restarting...</string>
    <string name="setup_activity_error_passphrase_invalidchars">Passphrase contains invalid characters, not saved!</string>
    <string name="setup_activity_error_passphrase_tooshort">Passphrase too short! New value was not saved.</string>
    <string name="setup_activity_error_passphrase_toolong">Passphrase too long! New value was not saved.</string>
    <string name="setup_activity_error_restart_tethering">Unable to restart tethering!</string>
    <string name="setup_activity_error_passphrase_info">Passphrase must be between 8 and 30 characters long!</string>
	<string name="setup_activity_error_passphrase_13chars">Passphrase must be 13 characters (ASCII) long!</string>
	<string name="setup_activity_error_ssid_invalidchars">SSID contains invalid characters</string>
	<string name="setup_activity_error_ssid_empty">New SSID cannot be empty</string>
	<string name="setup_activity_error_ssid_notsaved">, not saved.</string>
	<string name="setup_activity_info_ssid_changedto">SSID changed to </string>
	<string name="setup_activity_info_channel_changedto">Channel changed to </string>
	<string name="setup_activity_info_passphrase_changedto">Passphrase changed to </string>
	<string name="setup_activity_info_txpower_changedto">Transmit power changed to </string>
	<string name="setup_activity_info_lan_changedto">LAN-network changed to </string>
	<string name="setup_activity_info_wakelock_disabled">Wake-lock is now disabled.</string>
	<string name="setup_activity_info_wakelock_enabled">Wake-lock is now enabled.</string>
	<string name="setup_activity_info_accesscontrol_disabled">Access Control disabled.</string>
	<string name="setup_activity_info_accesscontrol_enabled">Access Control enabled.</string>
	<string name="setup_activity_bt_warning_title">Warning: Bluetooth</string>
	<string name="setup_activity_bt_warning_ok">OK</string>
	<string name="setup_activity_txpower_warning_title">Warning: Transmit Power</string>
	<string name="setup_activity_txpower_warning_ok">OK</string>
	<string name="setup_layout_category_bluetooth">Bluetooth</string>
	<string name="setup_layout_category_wifi">Wifi</string>
	<string name="setup_layout_category_security">Security</string>
	<string name="setup_layout_category_lan">LAN</string>
	<string name="setup_layout_category_notifications">Notifications</string>
	<string name="setup_layout_category_misc">Miscellaneous</string>
	<string name="setup_layout_usebluetooth">Use Bluetooth</string>
	<string name="setup_layout_usebluetooth_summary">Bluetooth PAN tether instead of WiFi</string>
	<string name="setup_layout_dontdisablewifi">Don\'t disable WiFi</string>
	<string name="setup_layout_dontdisablewifi_summary">Leave WiFi state alone</string>
	<string name="setup_layout_discoverable">Discoverable</string>
	<string name="setup_layout_discoverable_summary">Make device discoverable for 120 seconds on start-up</string>
	<string name="setup_layout_wifiencryption">Enable WiFi-Encryption</string>
	<string name="setup_layout_wifiencryption_summary">Turn on wifi-encrytion</string>
	<string name="setup_layout_encryptionsetup">Encryption setup method</string>
	<string name="setup_layout_encryptionsetup_summary">Change WiFi-Ecryption setup method</string>
	<string name="setup_layout_passphrase">Change Passphrase</string>
	<string name="setup_layout_passphrase_summary">Change Passphrase for WiFi-Encryption</string>
	<string name="setup_layout_passphrase_dialog_title">Enter Passphrase</string>
	<string name="setup_layout_ssid">Change SSID</string>
	<string name="setup_layout_ssid_summary">Change SSID</string>
	<string name="setup_layout_ssid_dialog_title">Enter SSID</string>
	<string name="setup_layout_ssid_dialog_message">Only alpha-numeric characters and \'.\', \'_\' allowed!</string>
	<string name="setup_layout_channel">Change Channel</string>
	<string name="setup_layout_channel_summary">Wireless frequency channel</string>
	<string name="setup_layout_channel_dialog_title">Select Channel</string>
	<string name="setup_layout_txpower">Transmit Power</string>
	<string name="setup_layout_txpower_summary">Reduce transmit power</string>
	<string name="setup_layout_txpower_dialog_title">Reduce Power</string>
	<string name="setup_layout_accesscontrol">Enable Access-Control</string>
	<string name="setup_layout_accesscontrol_summary">Turn on access-control</string>
	<string name="setup_layout_lan">Change LAN</string>
	<string name="setup_layout_lan_summary">LAN network settings</string>
	<string name="setup_layout_lan_dialog_title">Select LAN-Network</string>
	<string name="setup_layout_notification">Client Notification Mode</string>
	<string name="setup_layout_notification_summary">Client Notification Mode settings</string>
	<string name="setup_layout_notification_dialog_title">Select Client Notification Mode</string>
	<string name="setup_layout_vibrate">Vibrate on connect</string>
	<string name="setup_layout_vibrate_summary">Vibrate when a client connects</string>
	<string name="setup_layout_ringtone">Notification Ringtone</string>
	<string name="setup_layout_ringtone_summary">Ringtone to use with notifications</string>
	<string name="setup_layout_updatecheck">Disable Update-Check</string>
	<string name="setup_layout_updatecheck_summary">Turn off update-check at startup</string>
	<string name="setup_layout_wakelock">Disable Wake-Lock</string>
	<string name="setup_layout_wakelock_summary">Turn off wake-lock while tethering</string>
	<string name="setup_layout_battery">Battery Temperature</string>
	<string name="setup_layout_battery_summary">Configure battery temperature info</string>
	<string name="setup_layout_lockscreen">Disable Screen-Lock</string>
	<string name="setup_layout_lockscreen_summary">Hide the Lockscreen-button</string>
	<string name="about_layout_version">Version:</string>
	<string name="about_layout_projecthome">Project-Home:</string>
	<string name="about_layout_license">License:</string>
	<string name="about_layout_authors">Authors:</string>
	<string name="about_layout_contributors">Contributors:</string>
	<string name="about_layout_software">3rd-Party-Software:</string>
	<string name="clientrow_layout_macaddress">MAC-Address:</string>
	<string name="clientrow_layout_name">Name:</string>
	<string name="clientrow_layout_ipaddress">IP-Address:</string>
	<string name="donate_layout_line1">If you like this application, then please consider a donation to help with this project.</string>
	<string name="donate_layout_line2">By donating you provide support to an open-source project.</string>
	<string name="donate_layout_line3">Donations do NOT purchase a new application, but simply help us to continue our work.</string>
	<string name="donate_layout_line4">If you want to donate later, you can do so from the \'About\' dialog.</string>
	<string name="donate_layout_line5">Thank you!</string>
	<string name="noaccesscontrol_layout_line1">Sorry, but your kernel does not have all necessary features for the Access Control feature of this application. Access Control will be disabled.</string>
</resources>