<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<ScrollView android:id="@+id/scrollViewDonate" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">    
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
			<TextView android:text="@string/donate_layout_line1"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:paddingTop="15px"
				android:paddingLeft="15px"
				android:textStyle="bold"
				android:textColor="#ffffff" /><TextView android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:paddingTop="15px"
				android:paddingLeft="15px"
				android:textStyle="bold"
				android:textColor="#ffffff" android:text="@string/donate_layout_line2"/>
			<TextView android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:paddingTop="15px"
				android:paddingLeft="15px"
				android:textStyle="bold"
				android:textColor="#ffffff" android:text="@string/donate_layout_line3"/>		
			<TextView android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:paddingTop="15px"
				android:paddingLeft="15px"
				android:textStyle="bold"
				android:textColor="#ffffff" android:text="@string/donate_layout_line4"/>			
			<TextView android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:textSize="18sp"	
				android:paddingTop="15px"
				android:paddingLeft="15px"
				android:textStyle="bold"
				android:textColor="#ffffff" android:text="@string/donate_layout_line5"/>						
			</LinearLayout>
		</ScrollView>	
</LinearLayout>
